[gd_scene load_steps=3 format=3 uid="uid://bkst8nn51e4iu"]

[ext_resource type="Script" uid="uid://tvxd1qqaqmaj" path="res://src/ui/components/notifications/notification_content.gd" id="1_content"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ld77n"]
bg_color = Color(0.779291, 0.779291, 0.779291, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="NotificationContent" type="HBoxContainer"]
size_flags_horizontal = 3
theme_override_constants/separation = 12
script = ExtResource("1_content")

[node name="ImageContainerWrapper" type="Control" parent="."]
custom_minimum_size = Vector2(56, 56)
layout_mode = 2
size_flags_vertical = 4

[node name="ImageContainer" type="Panel" parent="ImageContainerWrapper"]
unique_name_in_owner = true
clip_children = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ld77n")

[node name="NotificationImage" type="TextureRect" parent="ImageContainerWrapper/ImageContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="IconTexture" type="TextureRect" parent="ImageContainerWrapper"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -26.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 1

[node name="LabelTitle" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/bold_italics_font_size = 16
theme_override_font_sizes/italics_font_size = 16
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 16
bbcode_enabled = true
text = "[b]New Notification[/b]"
scroll_active = false

[node name="LabelDescription" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/bold_italics_font_size = 13
theme_override_font_sizes/italics_font_size = 13
theme_override_font_sizes/normal_font_size = 13
theme_override_font_sizes/bold_font_size = 13
bbcode_enabled = true
text = "You have a new notification"
scroll_active = false
